--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -13,6 +13,12 @@
     flex-direction: column;
     justify-content: space-between;
 
+    .logo {
+        img {
+            width: 100%;
+        }
+    }
+
     .sign-out {
         position: absolute;
         bottom: 0;
